--- a/css/styles.css
+++ b/css/styles.css
@@ -1,127 +1,135 @@
-body{
-  font-family: lora;
-  font-size: 18px;
-}
-
-body, ul {
-  margin: 0;
-  padding: 0;
-}
-
-h1, h2, .skills-list {
-  font-family: montserrat;
-
-}
-img{
-  max-width: 100%;
-}
-
-
-nav{
-  z-index: 1;
+html, body {
   width: 100%;
+  margin: 0px;
+   padding: 0px;
+   overflow-x: hidden;
+   background: #FCFAF7;
 }
-
 
 header {
   position: relative;
   margin-bottom: 20px;
 }
-
-h1 {
-  font-size: 100px;
-  line-height: 130%;
-}
-h2 {
-  font-size: 30px;
-  line-height: 130%;
+body{
+  font-family: lora;
+  font-size: 18px;
+  color: #2D2E2E;
 }
 
-h1, h2 {
-  font-weight: normal;
+img{
+  max-width: 100%;
 }
 
-p{
-  line-height: 150%;
-}
-ul li {
-  list-style: none;
-  margin: 10px 0;
-}
+.fixed-nav-bar {
 
-
-.project {
-  margin: 70px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 50px;
 }
 
-.project .button {
-  margin-top: 10px;
+a {
+  text-decoration: none;
+  color: inherit;
 }
-
-footer{
-  text-align: center;
-  margin-left: 100px;
-}
-footer h2 {
-  font-family: Montserrat;
-font-style: normal;
-font-weight: bold;
-font-size: 150px;
-line-height: 130%;
-
-color: #DB995A;
-}
-
-.right-alignment {
-  text-align: right;
-}
-
-
 .logo {
+  text-decoration: none;
+  font-family: montserrat;
+  padding: 10px 0px 0px 55px;
   position: fixed; top: 0; left: 0;
   position: absolute;
 }
 
 .about {
+  text-decoration: none;
+  font-family: montserrat;
+  padding: 10px 55px 0px 0px;
+
   position: fixed; top: 0; right: 0;
   position: absolute;
 }
-.hero-text h2{
 
-  font-size: 77px;
-  line-height: 130.4%;
-  position: absolute;
-width: 788.59px;
-height: 400px;
-left: 155px;
-top: 175px;
+h1 {
+  font-size: 18px;
+  line-height: 130%;
 }
-.work-text h2{
+h2 {
+  font-size: 60px;
+  line-height: 130%;
+}
 
-  font-size: 77px;
-  line-height: 130.4%;
+h1, h2 {
+  font-weight: bold;
+  font-family: montserrat;
+}
+
+p{
+  line-height: 130%;
+}
+.foo1:hover {
+  color: #DB995A;
+  transition: color 0.5s ease-in-out;
+}
+.foo {
+  text-align: center;
+  width: 100%;
+  margin: 100px 0px 100px 0px;
+
+}
+
+
+.foo1 h2 {
+  display: inline-block;
+font-size: 90px;
+text-align: left;
+}
+
+.foo2 p {
+  display: inline-block;
+  border-bottom: 1px solid black;
+  padding-bottom: 20px;
+
+}
+
+.foo3 p {
+  text-align: right;
+  margin-right: 380px;
+  margin-top: -10px;
+}
+
+.hero-text h1{
+
+  font-size: 90px;
+  line-height: 130%;
   position: absolute;
-  width: 940px;
-  height: 600px;
-  left: 460px;
-  top: 1083px;
+width: 800px;
+height: 400px;
+left: 333px;
+top: 100px;
+}
+.hero-text p{
+
+writing-mode: vertical-lr;
+padding-left: 1px;
+margin-left: 1300px;
+z-index: 100;
+position: absolute;
+margin-top: -333px;
+border-left: 4px solid #F7F7F2;
+font-family: montserrat;
+
+
+}
+.abouttitle {
+  font-size: 90px;
 }
 
 .hero-image img  {
-  position: relative;
+    position: relative;
+}
 
-width: 1000px;
-height: 750px;
-left: 387px;
-top: 0px;
-}
-.work-image1 img  {
-  position: relative;
-  width: 1000px;
-  height: 750px;
-  left: 387px;
-  top: 0px;
-}
 
 span:before{
   content: '';
@@ -130,12 +138,102 @@ span:before{
 @keyframes animate {
 
   0%{
-    content: 'Bienvenue'
+    content: 'Bienvenue!'
   }
   50%{
-    content: 'Hello'
+    content: 'Welcome!'
   }
   100%{
-    content: 'Bienvenido'
+    content: 'Bienvenido!'
   }
+}
+.project {
+ text-align: center;
+ width: 100%;
+}
+.mycontainer  {
+display: inline-block;
+width: 927px;
+height: 530px;
+margin-bottom: 100px;
+}
+.mycontainer img {
+  max-width:100%;
+max-height:100%;
+}
+
+}
+
+{{{{{{}}}}}}
+.button:hover{
+  background: black;
+  color: white;
+}
+
+.projectabout {
+  margin-top: 100px;
+  margin-bottom: 150px;
+}
+
+.container1 {
+  padding-right: 100px;
+}
+
+.button {
+  border: 1px solid black;
+  text-decoration: none;
+  color: black;
+  padding: 10px 30px;
+  margin-top: 40px;
+  display: inline-block;
+  border-radius: 20px;
+  transition: background 0.5s ease-in-out, color 0.5s ease-in-out;
+}
+
+
+.next-project{
+  text-align: right;
+  margin: 50px 150px 50px 0px;
+}
+
+.next-project:hover {
+  color: #DB995A;
+  transition: color 0.5s ease-in-out;
+}
+.myrow {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.myrow2 {
+  margin-right: 50px;
+}
+
+.imgcol {
+  margin-top: 50px;
+}
+.overlay {
+  position: relative;
+  width: 927px;
+  height: 530px;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+  bottom: 535px;
+}
+
+.mycontainer:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
