--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ max-height:100%;
   margin: 50px 150px 50px 0px;
 }
 
-.next-project:hover {
+.next-projec:hover {
   color: #DB995A;
   transition: color 0.5s ease-in-out;
 }
