--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,9 @@ img{
   width: 100%;
   height: 50px;
 }
-
+.col a {
+text-decoration: underline;
+}
 a {
   text-decoration: none;
   color: inherit;
@@ -216,4 +218,8 @@ max-height:100%;
       margin-right: -50%;
       transform: translate(-50%, -50%) }
 
+}
+
+.col a {
+text-decoration: underline;
 }
