--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,6 @@ text-decoration: underline;
 }
 
 .col figure {
-  border: 30px solid;
-  border-color: #fff;
+  box-shadow:0px 0px 7px #2D2E2E;
+  border-radius: 2px;
 }
