--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,9 @@ text-decoration: underline;
 }
 
 .col figure {
-  box-shadow:0px 0px 7px #2D2E2E;
-  border-radius: 2px;
+  box-shadow:0px 0px 10px #2D2E2E;
+}
+
+.col {
+  margin-top: 50px;
 }
